--- a/contacto.html
+++ b/contacto.html
@@ -51,53 +51,49 @@
 
     </header>
     
-    <main class="contact-form">
-        <div class="contact-form__container">
-            <div class="form">
-                <div class="form-intro">
-                    <h2 class="form-intro__title">¡Contactanos!</h2>
-                    <p class="form-intro__intro">Si quieres dejarnos una consulta o sugerencia completa el siguiente formulario ,con gusto te responderemos.</p>
-                </div>
-                <form class="form__form" action="">
-                    <div class="form__section">
-                        <label for="" class="form__label">Nombre y Apellido</label>
-                        <input type="text" name="name" class="form__input" placeholder="Nombre y Apellido" required>
-                    </div>
-                    <div class="form__section">
-                        <label for="" class="form__label">Telefono</label>
-                        <input type="tel" name="phone" class="form__input" placeholder="Telefono" required>
-                    </div>
-                    <div class="form__section">
-                        <label for="" class="form__label">Correo Electronico</label>
-                        <input type="email" name="email" class="form__input" placeholder="Correo Electronico" required>
-                    </div>
-                    <div class="form__section">
-                        <label for="" class="form__label">Mensaje</label>
-                        <textarea name="mensaje" rows="10" class="form__input" placeholder="Escribe aqui tu mensaje"></textarea>
-                    </div>
-                    <input type="submit" value="Enviar" class="form__submit">
-                </form>
-            </div>
+    <main class="contact">
+        <section class="contact-form">
+            <h2 class="contact-title">¡Contactanos!</h2>
             <div class="contact-info">
-                <div class="contact-info__img">
+                <div class="contact-info__info">
+                    <ion-icon name="home-outline"></ion-icon><p>Calle Falsa 123 ,Springfield CP1234 ,Argentina.</p>
+                </div>
+
+                <div class="contact-info__info">
+                    <ion-icon name="call"></ion-icon><p>+549-123-456-7890</p>
+                </div>
+
+                <div class="contact-info__info">
+                    <ion-icon name="mail-outline"></ion-icon><p>contacto@email.com </p>
+                </div>
+
+                <div class="contact-intro">
+                    <p class="contact-intro__intro">Dejános una consulta o sugerencia, con gusto te responderemos.</p>
+                </div>
+            </div>  
+            <form class="form">
+                <div class="form__section">
+                    <label for="name" class="form__label">Nombre y Apellido</label>
+                    <input type="text" name="name" id="name" class="form__input" placeholder="Nombre y Apellido" required>
+                </div>
+                <div class="form__section">
+                    <label for="phone" class="form__label">Telefono</label>
+                    <input type="tel" name="phone" id="phone" class="form__input" placeholder="Telefono" required>
+                </div>
+                <div class="form__section">
+                    <label for="email" class="form__label">Correo Electronico</label>
+                    <input type="email" name="email" id="email" class="form__input" placeholder="Correo Electronico" required>
+                </div> 
+                <div class="form__section">
+                    <label for="mensaje" class="form__label">Mensaje</label>
+                    <textarea name="mensaje" id="mensaje" rows="6" class="form__textarea" placeholder="Escribe aqui tu mensaje"></textarea>
+                </div>
+                <button type="submit" value="Enviar"class="form__submit">Enviar</button>
+            </form>
+            <div class="contact-info__img">
                     <img src="./assets/img/logo-carni-circle.png" alt="logo-empresa">
-                </div>
-                <div class="contact-info__container">
-                    <div class="contact-info__info">
-                        <ion-icon name="map"></ion-icon> <p>Calle Falsa 123 ,Springfield CP1234 ,Argentina.</p>
-                    </div>
-                    <div class="contact-info__info">
-                        <ion-icon name="call"></ion-icon> <p>+549-123-456-7890</p>
-                    </div>
-                    <div class="contact-info__info">
-                        <ion-icon name="mail-outline"></ion-icon> <p>contacto@email.com </p>
-                    </div>
-
-
-                </div>
-
             </div>
-        </div>
+        </section>
 </main>
     
        <footer class="footer">
